# PROBE_benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py  visualisation.py
analysis/: analyze_failure_modes.py  extract_failures.py
annotation/: annotation_format.py  prepare_for_annotation.py
baselines/agentic/: __init__.py  action_prompt_template.py  base_agent.py  baseline_agent.py  inference.py  litellm_model.py  models.py  react_agent.py  reflexion_agent.py  rewoo_agent.py  utils.py
baselines/llm/: batch_anthropic.sh  batch_gemini.sh  batch_openai.sh  batch_post_processor.py  llm_prompt_template.py  run_native_batch_evaluation.py
configs/: __init__.py  actions.py  config_schema.py  unified_contracts.py  validators.py
data_generation/: config.ablation_claude.yaml  config.ablation_gpt41.yaml  config.ablation_gpt5mini.yaml  config.example.yaml
data_generation/data/: __init__.py  linkedin_profile.py
data_generation/examples/: end_to_end_with_distractors.py
data_generation/generators/: __init__.py  base.py  bottleneck_injector.py  checklist_generator.py  distractor_generator.py  generation_result.py  multi_llm_client.py  true_positives_generator.py  world_model.py
data_generation/ui/: annotation_interface.py  requirements.txt
data_generation/utils/: __init__.py  difficulty.py
evaluation/: batch_evaluate_baselines.py  generate_llm_scoring.py  llm_json_postprocessor.py  robust_batch_evaluate_baselines.py  scoring.py
scripts/: ablation_study_evaluate.sh  ablation_study_generate.sh  ablation_study_inference.sh
(+35 files in other folders)
